feat: add listing view wip

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
     "build": "prisma generate && next build",
-    "build:vercel": "src/scripts/build-vercel.sh",
+    "build:vercel": "src/scripts/build-vercel.js",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
@@ -130,6 +130,7 @@
     "lint-staged": "^12.5.0",
     "next-router-mock": "^0.9.13",
     "next-sitemap": "^2.5.28",
+    "pg": "^8.13.0",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
