--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "drop-local-db": "src/scripts/delete-local-db-data.sh",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
-    "build": "prisma generate && next build",
+    "build": "dotenv -e .env prisma generate && dotenv -e .env next build",
     "build:vercel": "src/scripts/build-vercel.sh",
     "start": "next start",
     "lint": "next lint",
