--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "react-stately": "^3.32.2",
+    "slugify": "^1.6.6",
     "smee-client": "^2.0.3",
     "svix": "^1.31.0",
     "tailwind-merge": "^2.5.2",
