--- a/.github/workflows/preview-deployment.yml
+++ b/.github/workflows/preview-deployment.yml
@@ -23,5 +23,4 @@ jobs:
           POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
           PR_NUMBER: ${{ github.event.number }}
           POSTGRES_DATABASE: ${{ secrets.POSTGRES_DATABASE }}
-        run: |
-          ./src/scripts/manage-db.js delete "preview_db_${PR_NUMBER}"
+        run: pnpm run manage-db delete "preview_db_${PR_NUMBER}"
