--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:prisma": "prisma generate --watch",
     "dev:storybook": "storybook dev -p 6006 --no-open --quiet",
     "dev:smee": "node src/scripts/smee-client.js",
-    "migrate:dev": "dotenv -e .env.local prisma migrate dev",
-    "migrate:prod": "dotenv -e .env prisma migrate deploy",
+    "migrate:dev": "dotenv -e .env.local -- prisma migrate dev",
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
     "manage-db": "src/scripts/manage-db.js",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
