--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   run-e2es:
+    name: Run E2E Tests
     if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
@@ -22,8 +23,12 @@ jobs:
         run: pnpm exec playwright install  --with-deps
 
       - name: Run tests
-        run: pnpm run e2e:ci
+        uses: nick-fields/retry@v3
         id: test-run
+        with:
+          max_attempts: 2
+          timeout_minutes: 10
+          command: pnpm run e2e:ci
         env:
           BASE_URL: ${{ github.event.deployment_status.environment_url }}
           PLAYWRIGHT_START_SERVER: 'false'
