--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,6 +27,7 @@ jobs:
         id: test-run
         with:
           max_attempts: 2
+          timeout_minutes: 15
           command: pnpm run e2e:ci
         env:
           BASE_URL: ${{ github.event.deployment_status.environment_url }}
