--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "predev": "src/scripts/start-local-db.sh && pnpm run migrate:dev",
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
-    "dev:next": "next dev",
+    "dev:next": "next dev --turbo",
     "dev:prisma": "prisma generate --watch",
     "dev:storybook": "storybook dev -p 6006 --no-open --quiet",
     "dev:smee": "node src/scripts/smee-client.js",
@@ -34,7 +34,7 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.3.7",
+    "@clerk/nextjs": "^6.5.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -67,15 +67,15 @@
     "fetch-blob": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.439.0",
-    "next": "^14.2.12",
+    "next": "15.0.3",
     "next-safe-action": "^7.9.2",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
     "qs": "^6.13.0",
-    "react": "^18.3.1",
+    "react": "19.0.0-rc-66855b96-20241106",
     "react-aria": "^3.34.3",
     "react-day-picker": "8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "react-stately": "^3.32.2",
@@ -92,7 +92,7 @@
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@chromatic-com/storybook": "^1.9.0",
-    "@clerk/testing": "^1.2.21",
+    "@clerk/testing": "^1.3.3",
     "@playwright/test": "^1.47.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
@@ -109,14 +109,14 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@types/qs": "^6.9.15",
-    "@types/react": "^18.3.5",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.7",
+    "eslint-config-next": "15.0.3",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-storybook": "^0.8.0",
@@ -145,5 +145,10 @@
     "**/*.{json,css,scss,md,webmanifest}": [
       "prettier -w"
     ]
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1"
+    }
   }
 }
