--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@storybook/addon-themes": "^8.2.9",
     "@types/lodash": "^4.17.7",
     "@uploadthing/react": "^7.0.3",
+    "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.0.12",
     "add": "^2.0.6",
