--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,6 +2,8 @@ name: Playwright Tests
 
 on:
   deployment_status:
+    types:
+      - success
 
 permissions:
   contents: read
@@ -30,7 +32,7 @@ jobs:
           timeout_minutes: 15
           command: pnpm run e2e:ci
         env:
-          BASE_URL: ${{ github.event.deployment_status.environment_url }}
+          BASE_URL: ${{ github.ref == 'refs/heads/main' && 'https://apadana.app' || github.event.deployment_status.environment_url }}
           PLAYWRIGHT_START_SERVER: 'false'
           CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
           CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
@@ -62,7 +64,6 @@ jobs:
               name: 'Playwright Test Report',
               head_sha: sha,
               status: 'completed',
-              workflow_run_id: context.workflow_run.id,
               conclusion: conclusion,
               details_url: reportUrl,
               output: {
