--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "^0.0.28",
     "@react-google-maps/api": "^2.19.3",
     "@storybook/addon-themes": "^8.2.9",
     "@types/lodash": "^4.17.7",
@@ -80,6 +82,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-stately": "^3.32.2",
+    "resend": "^4.0.1",
     "slugify": "^1.6.6",
     "smee-client": "^2.0.3",
     "svix": "^1.31.0",
