--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@playwright/test": "^1.47.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.4.5",
     "@storybook/addon-links": "^8.2.9",
     "@storybook/blocks": "^8.2.9",
     "@storybook/nextjs": "^8.2.9",
@@ -132,6 +133,7 @@
     "next-sitemap": "^2.5.28",
     "pg": "^8.13.0",
     "postcss": "^8.4.41",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storybook": "^8.2.9",
