--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "docker:dev": "docker-compose up --build",
+    "docker:dev": "docker-compose up --build --no-log-prefix",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v",
     "docker:rebuild": "docker compose build --no-cache app && docker compose up",
     "docker:prune": "docker system prune -af --volumes",
-    "predev": "prisma generate && prisma migrate dev",
+    "predev": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma migrate dev",
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev",
     "dev:prisma": "prisma generate --watch",
