--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: .
       dockerfile: Dockerfile.dev
     ports:
-      - "3000:3000"
-      - "6006:6006"
-      - "5555:5555"
+      - '3000:3000'
+      - '6006:6006'
+      - '5555:5555'
     volumes:
       - .:/app
       - app_node_modules:/app/node_modules
@@ -34,11 +34,11 @@ services:
           cpus: '1'
           memory: 4G
     logging:
-      driver: "json-file"
+      driver: 'json-file'
       options:
-        max-size: "10m"
-        max-file: "3"
-        tag: "{{.Name}}"
+        max-size: '10m'
+        max-file: '3'
+        tag: '{{.Name}}'
     tty: true
     ulimits:
       nofile:
@@ -48,9 +48,9 @@ services:
   db:
     image: postgres:16.6
     ports:
-      - "5432:5432"
+      - '5432:5432'
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U admin -d apadana" ]
+      test: ['CMD-SHELL', 'pg_isready -U admin -d apadana']
       interval: 5s
       timeout: 5s
       retries: 5
@@ -61,12 +61,13 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     logging:
-      driver: "json-file"
+      driver: 'json-file'
       options:
-        max-size: "10m"
-        max-file: "3"
-        tag: "{{.Name}}"
-    command: [ "postgres", "-c", "log_statement=none", "-c", "log_min_messages=warning" ]
+        max-size: '10m'
+        max-file: '3'
+        tag: '{{.Name}}'
+    command:
+      ['postgres', '-c', 'log_statement=none', '-c', 'log_min_messages=warning']
 
 volumes:
   app_node_modules:
