Use docker for e2e testing

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "docker:clean": "docker-compose down -v",
     "docker:rebuild": "docker compose build --no-cache app && docker compose up",
     "docker:prune": "docker system prune -af --volumes",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
+    "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
+    "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
+    "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
     "predev": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma migrate dev",
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
@@ -17,7 +21,6 @@
     "dev:studio": "dotenv -e .env -- prisma studio --browser none",
     "migrate:dev": "dotenv -e .env.local -- prisma migrate dev",
     "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
-    "manage-db": "src/scripts/manage-db.js",
     "prisma:generate": "prisma generate",
     "prisma:watch": "prisma generate --watch",
     "build": "dotenv -e .env prisma generate && dotenv -e .env next build",
@@ -28,10 +31,10 @@
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
     "test": "jest",
-    "e2e": "PLAYWRIGHT_START_SERVER=true PORT=3030 playwright test --project=chromium",
+    "pree2e": "pnpm docker:prod",
+    "e2e": "PORT=3030 playwright test --project=chromium",
     "e2e:ci": "playwright test",
-    "e2e:debug": "playwright test --project=chromium --debug",
-    "e2e:prod": "PLAYWRIGHT_START_SERVER=false BASE_URL=https://apadana.app playwright test --project=chromium",
+    "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium",
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
