--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,25 +1,4 @@
-FROM node:22.11.0
-
-WORKDIR /app
-
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
-
-# Create pnpm store directory
-RUN pnpm config set store-dir /root/.pnpm-store
-
-# Copy package files first
-COPY package.json pnpm-lock.yaml ./
-
-# Install dependencies using pnpm with store caching
-RUN --mount=type=cache,target=/root/.pnpm-store \
-  pnpm install --frozen-lockfile
-
-# Copy the rest of the application
-COPY . .
-
-# Generate Prisma client
-RUN pnpm prisma generate
+FROM base-image
 
 # Expose ports for Next.js, Storybook, and Prisma Studio
 EXPOSE 3000 6006 5555
@@ -29,4 +8,4 @@ COPY docker-entrypoint.dev.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.dev.sh
 
 ENTRYPOINT ["docker-entrypoint.dev.sh"]
-CMD ["pnpm", "run", "dev"] 
+CMD ["pnpm", "run", "dev"]
