Auth: work in progress

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "docker:dev": "docker-compose up --build --no-log-prefix",
+    "docker:base": "docker build -t base-image -f Dockerfile.base .",
+    "docker:dev": "pnpm docker:base && docker-compose up --build --no-log-prefix",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v",
     "docker:rebuild": "docker compose build --no-cache app && docker compose up",
@@ -82,6 +83,7 @@
     "next": "15.0.3",
     "next-safe-action": "^7.9.2",
     "next-themes": "^0.3.0",
+    "oslo": "^1.2.1",
     "prisma": "^5.22.0",
     "qs": "^6.13.0",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -109,8 +111,8 @@
     "@playwright/test": "^1.47.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
-    "@storybook/addon-onboarding": "^8.4.5",
     "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.4.5",
     "@storybook/blocks": "^8.2.9",
     "@storybook/nextjs": "^8.2.9",
     "@storybook/react": "^8.2.9",
