--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -18,5 +18,7 @@ RUN --mount=type=cache,target=/root/.pnpm-store \
 # Copy the rest of the application
 COPY . .
 
+RUN pnpm config set update-notifier false
+
 # Generate Prisma client
 RUN pnpm prisma generate
