--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -15,6 +13,8 @@ services:
       - POSTGRES_PORT=5432
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
+      - PRISMA_HIDE_UPDATE_MESSAGE=true
+      - STORYBOOK_TELEMETRY_DEBUG=1
       - NEXT_SHARP_PATH=/app/node_modules/sharp
     depends_on:
       db:
@@ -47,8 +47,8 @@ services:
       - '5432:5432'
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U admin -d apadana']
-      interval: 5s
-      timeout: 5s
+      interval: 1s
+      timeout: 1s
       retries: 5
     environment:
       - POSTGRES_USER=admin
