--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   app:
     build:
@@ -22,9 +20,14 @@ services:
       - POSTGRES_PORT=5432
       - NODE_OPTIONS="--max-old-space-size=8192"
       - NEXT_TELEMETRY_DISABLED=1
+      - STORYBOOK_TELEMETRY_DEBUG=1
+      - STORYBOOK_LOG_LEVEL=error
       - NEXT_SHARP_PATH=/app/node_modules/sharp
+      - PRISMA_HIDE_UPDATE_MESSAGE=true
+      - NODE_OPTIONS="--no-deprecation"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     deploy:
       resources:
         limits:
@@ -46,14 +49,14 @@ services:
         hard: 65536
 
   db:
-    image: postgres:16.6
+    image: postgres:16
     ports:
       - '5432:5432'
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U admin -d apadana']
-      interval: 5s
-      timeout: 5s
-      retries: 5
+      interval: 1s
+      timeout: 1s
+      retries: 30
     environment:
       - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
@@ -67,7 +70,11 @@ services:
         max-file: '3'
         tag: '{{.Name}}'
     command:
-      ['postgres', '-c', 'log_statement=none', '-c', 'log_min_messages=warning']
+      [
+        'postgres',
+        '-c', 'log_statement=none',
+        '-c', 'log_min_messages=panic'
+      ]
 
 volumes:
   app_node_modules:
