--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
     "docker:dev": "pnpm docker:base && docker-compose up --build --no-log-prefix",
     "docker:down": "docker-compose down",
     "docker:clean": "docker-compose down -v",
-    "docker:rebuild": "docker compose build --no-cache app && docker compose up",
+    "docker:db": "docker-compose exec db psql -U admin -d apadana",
+    "docker:rebuild": "docker compose build --no-cache app && docker compose up --no-log-prefix",
     "docker:prune": "docker system prune -af --volumes",
     "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
     "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
     "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
     "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
-    "predev": "dotenv -e .env.local -- prisma generate && dotenv -e .env.local -- prisma migrate dev",
+    "predev": "pnpm prisma:generate && pnpm migrate:dev",
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
-    "dev:prisma": "prisma generate --watch",
-    "dev:storybook": "storybook dev -p 6006 --no-open --quiet",
+    "dev:prisma": "dotenv -e .env.local -- prisma generate --no-hints --watch",
+    "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
     "dev:smee": "node src/scripts/smee-client.js",
     "dev:studio": "dotenv -e .env -- prisma studio --browser none",
-    "migrate:dev": "dotenv -e .env.local -- prisma migrate dev",
-    "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
-    "prisma:generate": "prisma generate",
-    "prisma:watch": "prisma generate --watch",
-    "build": "dotenv -e .env prisma generate && dotenv -e .env next build",
+    "migrate:dev": "dotenv -e .env.local -- prisma migrate dev --name $(date +'%Y%m%d_%H%M%S')",
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy --no-hints",
+    "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
+    "prisma:watch": "dotenv -e .env.local -- prisma generate --no-hints --watch",
+    "build": "dotenv -e .env prisma generate --no-hints && dotenv -e .env next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
@@ -40,7 +41,7 @@
     "format:check": "prettier -c .",
     "postbuild": "next-sitemap --config next-sitemap.config.js",
     "prepare": "husky install",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --quiet",
     "build-storybook": "storybook build"
   },
   "dependencies": {
