--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - app_node_modules:/app/node_modules
       - pnpm_store:/root/.pnpm-store
       - next_cache:/app/.next
+      - ./package.json:/app/package.json:delegated
     environment:
       - DATABASE_URL=postgresql://admin:admin@db:5432/apadana
       - POSTGRES_USER=admin
