--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.5.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -59,6 +58,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
@@ -101,6 +101,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.1.0",
+    "uuid": "^11.0.3",
     "uvcanvas": "^0.2.1",
     "yet-another-react-lightbox": "^3.21.4",
     "zod": "^3.23.8"
@@ -108,7 +109,6 @@
   "devDependencies": {
     "@actions/core": "^1.10.1",
     "@chromatic-com/storybook": "^1.9.0",
-    "@clerk/testing": "^1.3.3",
     "@playwright/test": "^1.47.0",
     "@storybook/addon-essentials": "^8.2.9",
     "@storybook/addon-interactions": "^8.2.9",
