--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@internationalized/date": "^3.5.5",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
