--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,12 +14,18 @@ permissions:
 jobs:
   run-e2es:
     name: Run E2E Tests
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success''
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
+
+      - name: Start Docker Compose
+        uses: docker/setup-buildx-action@v4
+        with:
+          compose_files:
+            - docker-compose.prod.yml
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install  --with-deps
@@ -32,7 +38,7 @@ jobs:
           timeout_minutes: 15
           command: pnpm run e2e:ci
         env:
-          BASE_URL: https://apadana.app
+          BASE_URL: http://localhost:3030
 
       - name: Upload Playwright Test Report
         id: upload-results
@@ -70,3 +76,7 @@ jobs:
                   `\n\nClick [here](${reportUrl}) to view the detailed report.`
               }
             });
+
+      - name: Stop Docker Compose
+        if: always()
+        run: docker compose -f docker-compose.prod.yml down
