--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test:watch": "jest --watch",
     "test": "jest",
-    "pree2e": "pnpm docker:prod",
     "e2e": "PORT=3030 playwright test --project=chromium",
+    "e2e:dev": "PORT=3000 playwright test --project=chromium",
     "e2e:ci": "playwright test",
     "e2e:prod": "BASE_URL=https://apadana.app playwright test --project=chromium",
     "format": "prettier -w .",
@@ -152,6 +152,8 @@
     "storybook": "^8.2.9",
     "tailwindcss": "^3.4.10",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4"
   },
   "lint-staged": {
@@ -169,5 +171,8 @@
     "overrides": {
       "@types/react": "npm:types-react@19.0.0-rc.1"
     }
+  },
+  "prisma": {
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
   }
 }
