--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,11 +1,23 @@
-FROM base-image AS builder
+# Build stage
+FROM node:22.11.0 AS builder
+
+WORKDIR /app
+
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
+
+# Copy and install dependencies
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile --ignore-scripts
+
+# Copy source code
+COPY . .
 
 # Build the application
-ENV NEXT_TELEMETRY_DISABLED 1
 ENV NODE_ENV production
 RUN pnpm build
 
-# Production image
+# Production stage
 FROM node:22.11.0
 
 WORKDIR /app
@@ -13,25 +25,20 @@ WORKDIR /app
 # Install pnpm
 RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
 
-# Copy necessary files from builder
-COPY --from=builder /app/next.config.ts ./
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/pnpm-lock.yaml ./
+# Copy package files and install production dependencies
+COPY package.json pnpm-lock.yaml ./
+RUN pnpm install --prod --frozen-lockfile --ignore-scripts
+
+# Copy built assets from the builder
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/public ./public
-COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/next.config.ts ./
 
-# Copy .env.local if it exists. if this file exists, it means the 
-# prod build is running locally.
-COPY --from=builder /app/.env.local ./.env
-
-
-# Set production environment
+# Set environment variables
 ENV NODE_ENV production
 ENV NEXT_TELEMETRY_DISABLED 1
 ENV PORT 3030
 
-# Expose the production port
+# Expose port and start the application
 EXPOSE 3030
-
 CMD ["pnpm", "start"] 
