better client generation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev:next": "next dev --turbo",
     "dev:prisma": "dotenv -e .env.local -- prisma generate --no-hints --watch",
     "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
-    "dev:studio": "dotenv -e .env -- prisma studio --browser none",
+    "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --browser none'",
     "migrate:dev": "dotenv -e .env.local -- prisma migrate dev --name $(date +'%Y%m%d_%H%M%S')",
     "migrate:prod": "dotenv -e .env -- prisma migrate deploy --no-hints",
     "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
@@ -153,7 +153,8 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "nodemon": "^3.1.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
