--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   run-e2es:
     name: Run E2E Tests
-    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success''
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,8 +22,7 @@ jobs:
       - name: Start Docker Compose
         uses: docker/setup-buildx-action@v4
         with:
-          compose_files:
-            - docker-compose.prod.yml
+          compose-file: docker-compose.prod.yml
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install  --with-deps
