Fix docker images

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,13 +6,18 @@ services:
     ports:
       - '3030:3030'
     environment:
+      - PORT=3030
       - DATABASE_URL=postgresql://admin:admin@db:5432/apadana
       - NODE_ENV=production
       - NEXT_TELEMETRY_DISABLED=1
       - PRISMA_HIDE_UPDATE_MESSAGE=true
+      - PRISMA_BINARY_TARGETS=native,linux-arm64-openssl-3.0.x,linux-musl-openssl-3.0.x
+      - PRISMA_CLI_QUERY_ENGINE_TYPE=binary
       - STORYBOOK_TELEMETRY_DEBUG=1
       - NEXT_SHARP_PATH=/app/node_modules/sharp
       - TEST_ENV=e2e
+       # this is also added in Dockerfile.dev. maybe we can remove it from here?
+      - PRISMA_OUTPUT_DIR=node_modules/.prisma/client
     depends_on:
       db:
         condition: service_healthy
