--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docker:db": "docker-compose exec db psql -U admin -d apadana",
     "docker:rebuild": "docker compose build --no-cache app && docker compose up --no-log-prefix",
     "docker:prune": "docker system prune -af --volumes",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix --abort-on-container-exit",
     "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
     "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
     "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
@@ -22,10 +22,10 @@
     "dev:storybook": "storybook dev --quiet --port=6006 --no-open | grep -v -iE '^(info|warn)'",
     "dev:studio": "nodemon --watch prisma/schema.prisma --exec 'dotenv -e .env -- prisma studio --browser none'",
     "migrate:dev": "dotenv -e .env.local -- prisma migrate dev --name $(date +'%Y%m%d_%H%M%S')",
-    "migrate:prod": "dotenv -e .env -- prisma migrate deploy --no-hints",
+    "migrate:prod": "dotenv -e .env -- prisma migrate deploy",
     "prisma:generate": "dotenv -e .env.local -- prisma generate --no-hints",
     "prisma:watch": "dotenv -e .env.local -- prisma generate --no-hints --watch",
-    "build": "dotenv -e .env prisma generate --no-hints && dotenv -e .env next build",
+    "build": "dotenv -e .env.local -- prisma generate --no-hints && dotenv -e .env.local -- next build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
@@ -48,6 +48,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@faker-js/faker": "^9.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@internationalized/date": "^3.5.5",
     "@prisma/client": "^5.22.0",
