--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,6 +1,7 @@
 # Build stage
 FROM node:22.11.0-slim 
 
+
 RUN apt-get update && apt-get install -y \
   python3 \
   make \
@@ -16,6 +17,8 @@ RUN corepack enable && corepack prepare pnpm@9.9.0 --activate
 RUN pnpm config set update-notifier false
 # node deprecation warnings off
 RUN pnpm config set node-deprecation-warnings false
+# Turn off Node.js warnings
+ENV NODE_OPTIONS=--no-warnings
 
 # Copy and install dependencies
 COPY package.json pnpm-lock.yaml ./
@@ -24,15 +27,14 @@ RUN pnpm install --frozen-lockfile --ignore-scripts --ignore-scripts
 # Copy source code
 COPY . .
 
+# Disable Next.js telemetry
+RUN pnpm exec next telemetry disable
+
 # Build the application
 ENV PRISMA_OUTPUT_DIR node_modules/.prisma/client
 ENV NODE_ENV production
 RUN pnpm prisma:generate
-RUN pnpm build
-
-# seed the database
-RUN pnpm prisma:seed
 
 # Expose port and start the application
 EXPOSE 3030
-CMD ["pnpm", "start"] 
+CMD ["sh", "-c", "pnpm migrate:prod && pnpm dev:prisma:seed && pnpm build && pnpm start"]
