--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile.prod
     ports:
       - '3030:3030'
+    env_file:
+      - .env.local
     environment:
       - PORT=3030
       - DATABASE_URL=postgresql://admin:admin@db_prod:5432/apadana
