--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,6 @@
     ".next/types/**/*.ts",
     "prisma/**/*.ts"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules", ".next"],
   "moduleResolution": ["node_modules", ".next", "node"]
 }
