--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -20,6 +20,7 @@ permissions:
 jobs:
   todos:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - uses: actions/checkout@v4
