--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build
         run: pnpm run build
         env:
+          DATABASE_URL: fake
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
 
   lint:
