--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "docker:db": "docker-compose exec db psql -U admin -d apadana",
     "docker:rebuild": "docker compose build --no-cache app && docker compose up --no-log-prefix",
     "docker:prune": "docker system prune -af --volumes",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix --abort-on-container-exit",
+    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build --no-log-prefix",
     "docker:prod:down": "docker-compose -f docker-compose.prod.yml down",
     "docker:prod:logs": "docker-compose -f docker-compose.prod.yml logs -f",
     "docker:prod:clean": "docker-compose -f docker-compose.prod.yml down -v",
+    "docker:prod:rebuild": "docker-compose -f docker-compose.prod.yml build app_prod && docker-compose -f docker-compose.prod.yml up -d app_prod",
     "predev": "pnpm prisma:generate && pnpm migrate:dev",
     "dev": "dotenv -e .env.local -- concurrently --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
     "dev:next": "next dev --turbo",
@@ -27,6 +28,7 @@
     "prisma:watch": "dotenv -e .env.local -- prisma generate --no-hints --watch",
     "build": "dotenv -e .env.local -- prisma generate --no-hints && dotenv -e .env.local -- next build",
     "start": "next start",
+    "fix": "pnpm lint:fix && pnpm format",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && pnpm format",
     "lint:strict": "eslint --max-warnings=0 src",
