--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,12 +24,13 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Start Docker Compose
-        uses: docker/setup-buildx-action@v3
-        with:
-          compose-file: docker-compose.prod.yml
+        run: |
+          docker compose -f docker-compose.prod.yml up -d
+          # Wait for the application to be ready
+          timeout 60s bash -c 'until curl -s http://localhost:3030/api/health; do sleep 2; done'
 
       - name: Install Playwright Browsers
-        run: pnpm exec playwright install  --with-deps
+        run: pnpm exec playwright install --with-deps
 
       - name: Run tests
         id: test-run
@@ -53,7 +54,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { sha } = context.payload.deployment;
+            const sha = context.payload.pull_request?.head.sha || context.sha;
             const testRunOutcome = '${{ steps.test-run.outcome }}';
             const conclusion = testRunOutcome === 'success' ? 'success' : 'failure';
             const reportUrl = `https://apadana-e2e.s3.amazonaws.com/${sha}/index.html`;
