--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -17,19 +17,43 @@ jobs:
   run-e2es:
     name: Run E2E Tests
     runs-on: ubuntu-latest
-    timeout-minutes: 10
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v4
-      - name: Setup
-        uses: ./.github/actions/setup
+
+      - name: Set up Node.js with pnpm caching
+        uses: actions/setup-node@v3
+        with:
+          node-version: '22'
+          cache: 'pnpm'
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Cache Docker layers
+        uses: actions/cache@v3
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/docker-compose.prod.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
       - name: Start Docker Compose
+        env:
+          DOCKER_BUILDKIT: 1
         run: |
           # Create empty .env.local
           touch .env.local
+          docker compose -f docker-compose.prod.yml build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new
           docker compose -f docker-compose.prod.yml up -d
           # Wait for the application to be ready
           timeout 60s bash -c 'until curl -s http://localhost:3030/api/health; do sleep 2; done'
+          # Update cache
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
@@ -46,7 +70,7 @@ jobs:
         if: always()
         with:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: apadana-e2e
           source_dir: .next/__e2e__reports__
           destination_dir: ${{ github.event.pull_request.head.sha || github.sha }}
