--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -21,17 +21,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js with pnpm caching
-        uses: actions/setup-node@v3
-        with:
-          node-version: '22'
-          cache: 'pnpm'
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Cache Docker layers
         uses: actions/cache@v3
