--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,27 +27,30 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
-      - name: Cache Docker layers
-        uses: actions/cache@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/docker-compose.prod.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Create .env.local
+        run: 'touch .env.local'
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./docker-compose.prod.yml
+          push: false
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}:cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}:cache,mode=max
 
       - name: Start Docker Compose
-        env:
-          DOCKER_BUILDKIT: 1
-        run: |
-          # Create empty .env.local
-          touch .env.local
-          docker compose -f docker-compose.prod.yml build --cache-from=type=local,src=/tmp/.buildx-cache --cache-to=type=local,dest=/tmp/.buildx-cache-new
-          docker compose -f docker-compose.prod.yml up -d
-          # Wait for the application to be ready
-          timeout 60s bash -c 'until curl -s http://localhost:3030/api/health; do sleep 2; done'
-          # Update cache
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+        run: pnpm docker:prod:ci
 
       - name: Install Playwright Browsers
         run: pnpm exec playwright install --with-deps
